--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "gen": "npx supabase gen types typescript --project-id lpkdczjlpdvvpsakzwrm --schema public > src/types/supabase.ts"
+    "gen": "npx supabase gen types --lang=typescript --project-id lpkdczjlpdvvpsakzwrm --schema public > src/types/supabase.ts"
   },
   "dependencies": {
     "@fullcalendar/core": "^6.1.15",
@@ -18,6 +18,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.4",
+    "@tanstack/react-query": "^5.51.18",
     "axios": "^1.7.2",
     "next": "14.2.5",
     "react": "^18",
